Finished learning Angular Template-driven forms

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -2,25 +2,78 @@
 
 <div class="container mt-5">
     <div class="form-area">
-        <form #f = 'ngForm' (submit) = "onSubmit(f)"> 
-        <!--In order to make a form as a template driven form, we need to add ngForm directive to the form template variable.-->
-    
+        <form #f='ngForm' (ngSubmit)="onSubmit(f)">
+            <!--In order to make a form as a template driven form, we need to add ngForm directive to the form template variable.-->
+
             <div class="form-group">
                 <label>First Name</label>
-                <input type="text" placeholder="Full name" class="form-control">
+                <input 
+                    type="text" 
+                    placeholder="Full name" 
+                    class="form-control" 
+                    name="fullName" 
+                    ngModel
+                    #fullName='ngModel' 
+                    (change)="getValue(fullName)" 
+                    required
+                    [ngClass]="{'is-invalid': fullName?.touched && fullName?.invalid}" 
+                    minlength="5" 
+                    maxlength="10"
+                >
+
+                <div *ngIf="fullName?.errors?.['required']">
+                    <div class="alert alert-danger" *ngIf="fullName?.touched && fullName?.invalid">Full Name is required</div>
+                </div>
+
+                <div *ngIf="fullName?.errors?.['minlength']">
+                    <div class="alert alert-danger" *ngIf="fullName?.touched && fullName?.invalid">Full Name must be at
+                        least 5 characters long</div>
+                </div>
             </div>
-    
+
             <div class="form-group">
                 <label>Email</label>
-                <input type="email" placeholder="Email" class="form-control">
+                <input 
+                    type="email" 
+                    placeholder="Email" 
+                    class="form-control" 
+                    name="email" 
+                    #email='ngModel'
+                    pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" 
+                    [ngClass]="{'is-invalid': email?.touched && email?.invalid}"
+                    required 
+                    ngModel
+                >
+
+                <div *ngIf="email?.errors?.['required']">
+                    <div class="alert alert-danger" *ngIf="email?.touched && email?.invalid">Email is required</div>
+                </div>
+
+                <div *ngIf="email?.errors?.['pattern']">
+                    <div class="alert alert-danger" *ngIf="email?.touched && email?.invalid">Invalid email address</div>
+                </div>
             </div>
-    
+
             <div class="form-group">
                 <label>Address</label>
-                <textarea cols="30" rows="10" placeholder="Address" class="form-control"></textarea>
+                <textarea 
+                    cols="30" 
+                    rows="10" 
+                    placeholder="Address" 
+                    class="form-control" 
+                    name="address" 
+                    ngModel 
+                    #address = 'ngModel' 
+                    [ngClass]="{'is-invalid': address.touched && address.invalid}"
+                    required>
+                </textarea>
             </div>
-    
-            <button type="submit" class="btn btn-primary">Submit</button>
+
+            <div *ngIf="address?.errors?.['required']">
+                <div class="alert alert-danger" *ngIf="address.touched && address.invalid"> Address is required.. </div>
+            </div>
+
+            <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Submit</button>
         </form>
     </div>
 </div>
