--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,12 +1,13 @@
 <p>form works!</p>
 
+<!--Template driven forms-->
 <div class="container mt-5">
     <div class="form-area">
         <form #f='ngForm' (ngSubmit)="onSubmit(f)">
             <!--In order to make a form as a template driven form, we need to add ngForm directive to the form template variable.-->
 
             <div class="form-group">
-                <label>First Name</label>
+                <label>Full Name</label>
                 <input 
                     type="text" 
                     placeholder="Full name" 
@@ -75,5 +76,152 @@
 
             <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Submit</button>
         </form>
+
+        <br />
+        <br />
+
+<!--Reactive forms-->
+        <h1>Reactive forms</h1>
+        <form [formGroup]="form" (ngSubmit)="onReactiveSubmit()">
+
+            <div class="form-group">
+                <label>First Name</label>
+                <input 
+                    type="text" 
+                    placeholder="Full name" 
+                    class="form-control" 
+                    name="fullName" 
+                    formControlName="fullName"
+                >
+                <div class="alert alert-danger" *ngIf="FullName.touched && FullName.invalid"> 
+                    <div *ngIf="FullName?.errors?.['required']">Full Name is required</div>
+                    <div *ngIf="FullName?.errors?.['minlength']">Full Name must be at least 5 characters long</div>
+                </div>
+
+            </div>
+
+            <div class="form-group">
+                <label>Email</label>
+                <input 
+                    type="email" 
+                    placeholder="Email" 
+                    class="form-control" 
+                    name="email"
+                    formControlName="email"
+                    [ngClass]="{'is-invalid': Email.touched && Email.invalid}"
+                >
+
+                <div class="alert alert-danger" *ngIf="Email.touched && Email.invalid"> 
+                    <div *ngIf="Email?.errors?.['required']">Email is required</div>
+                    <div *ngIf="Email?.errors?.['email']">Invalid Email ..</div>
+                </div>
+            </div>
+
+<!--Contact Details nested Form group-->
+            <div formGroupName = 'contactDetails'>
+
+                <div class="form-group">
+                    <label>Address</label>
+                    <textarea 
+                        cols="30" 
+                        rows="10" 
+                        placeholder="Address" 
+                        class="form-control" 
+                        name="address" 
+                        formControlName="address"
+                        [ngClass]="{'is-invalid': Address.touched && Address.invalid}"
+                    >
+                    </textarea>
+                    <div class="alert alert-danger" *ngIf="Address.touchSd && Address.invalid"> 
+                        <div *ngIf="Address?.errors?.['required']">Address is required</div>
+                    </div>
+                </div>
+    
+                <div class="form-group">
+                    <label>Shipping Address</label>
+                    <textarea 
+                        cols="30" 
+                        rows="10" 
+                        placeholder="Shipping Address" 
+                        class="form-control" 
+                        name="shippingAddress" 
+                        formControlName="shippingAddress"
+                        [ngClass]="{'is-invalid': ShippingAddress.touched && ShippingAddress.invalid}"
+                    >
+                    </textarea>
+    
+                    <div class="alert alert-danger" *ngIf="ShippingAddress.touched && ShippingAddress.invalid"> 
+                        <div *ngIf="ShippingAddress?.errors?.['required']">Shipping Address is required</div>
+                    </div>
+                </div>
+    
+                <div class="form-group">
+                    <label>Contact No</label>
+                    <input 
+                        type="text" 
+                        placeholder="Contact No"
+                        class="form-control" 
+                        name="contactNo"
+                        formControlName="contactNo"
+                        [ngClass]="{'is-invalid': ContactNo.touched && ContactNo.invalid}"
+                    >
+    
+                    <div class="alert alert-danger" *ngIf="ContactNo.touched && ContactNo.invalid"> 
+                        <div *ngIf="ContactNo?.errors?.['required']">The Contact is required</div>
+                        <div *ngIf="ContactNo?.errors?.['email']">Invalid Contact No  ..</div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="">Skills</label>
+                    <input type="text" class="form-control" #skills (keyup.enter) = "addSkills(skills)">
+
+                    <ul class="list-group">
+                        <li class="list-group-item" *ngFor="let skill of Skills.controls; let i = index">
+                            {{ skill.value }}
+                            <a class="btn btn-danger btn-sm" (click)="removeSkills(i)"> X </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Submit</button>
+        </form>
     </div>
+</div>
+
+<!-- Custom Validation Form-->
+<div class="container">
+    <form [formGroup]="form2">
+        <div class="form-group">
+            <label>Username</label>
+            <input 
+                type="text" 
+                class="form-control"
+                formControlName="username"
+            >
+
+            <div class="alert alert-danger" *ngIf="fc.Username.touched && fc.Username.invalid"> 
+                <div *ngIf="fc.Username?.errors?.['required']">Username is required</div>
+                <div *ngIf="fc.Username?.errors?.['minlength']">Username must be at least 5 characters long</div>
+                <div *ngIf="fc.Username?.errors?.['noSpace']">Username cannot contain spaces</div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label>Password</label>
+            <input 
+                type="text" 
+                class="form-control"
+                formControlName="password"
+            >
+
+            <div class="alert alert-danger" *ngIf="fc.Password.touched && fc.Password.invalid"> 
+                <div *ngIf="fc.Password?.errors?.['required']">Password is required</div>
+                <div *ngIf="fc.Password?.errors?.['minlength']">Password must be at least 5 characters long</div>
+            </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </div>
